--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gradient-to-tr from-blue-100 to-violet-100 min-h-screen flex items-center justify-center py-10 px-4">
   <div class="bg-white shadow-2xl rounded-2xl p-8 w-full max-w-4xl">
-    <h1 class="text-3xl font-bold text-center text-violet-800 mb-6">🧮 Kuis Bilangan Berpangkat</h1>
+    <h1 class="text-3xl font-bold text-center text-violet-800 mb-6">Kuis Bilangan Berpangkat</h1>
     <form id="quizForm" class="space-y-5"></form>
     <div class="text-center mt-6">
       <button onclick="submitQuiz()" type="button" class="bg-violet-700 hover:bg-violet-800 text-white px-6 py-2 rounded-full font-semibold shadow">✔️ Submit</button>
@@ -19,31 +19,26 @@
 
   <script>
     const soal = [
-      // 1. Soal Dasar (5)
+      // Dasar (5 soal, termasuk 3 soal negatif bentuk pecahan)
       { pertanyaan: "3² = ...", pilihan: ["6", "9", "3", "8"], jawaban: "9" },
       { pertanyaan: "2⁴ = ...", pilihan: ["8", "12", "16", "10"], jawaban: "16" },
-      { pertanyaan: "5¹ = ...", pilihan: ["1", "0", "5", "10"], jawaban: "5" },
-      { pertanyaan: "10⁰ = ...", pilihan: ["10", "1", "0", "100"], jawaban: "1" },
-      { pertanyaan: "6² = ...", pilihan: ["12", "18", "36", "24"], jawaban: "36" },
+      { pertanyaan: "2⁻¹ = ...", pilihan: ["1/2", "2", "0", "-2"], jawaban: "1/2" },
+      { pertanyaan: "a⁻² = ...", pilihan: ["1/a²", "a²", "a⁻²", "2a"], jawaban: "1/a²" },
+      { pertanyaan: "(1/3)⁻² = ...", pilihan: ["3²", "1/9", "3⁻²", "3"], jawaban: "3²" },
 
-      // 2. Penerapan Sifat (10)
+      // Penerapan sifat (10 soal)
       { pertanyaan: "2³ × 2⁻¹ = ...", pilihan: ["2²", "2⁴", "2", "2⁰"], jawaban: "2²" },
       { pertanyaan: "x⁵ ÷ x⁷ = ...", pilihan: ["x²", "x⁻²", "x⁻¹", "x⁰"], jawaban: "x⁻²" },
       { pertanyaan: "(3²)³ = ...", pilihan: ["3⁶", "3⁵", "3⁴", "3⁹"], jawaban: "3⁶" },
-      { pertanyaan: "(2×3)² = ...", pilihan: ["2² × 3²", "2 × 3²", "2² × 3", "2³ × 3²"], jawaban: "2²×3²" },
+      { pertanyaan: "(2×3)² = ...", pilihan: ["5²", "2×3²", "2²×3²", "6³"], jawaban: "2²×3²" },
       { pertanyaan: "(a⁻²)³ = ...", pilihan: ["a⁻⁵", "a⁻⁶", "a⁻³", "a⁶"], jawaban: "a⁻⁶" },
-      { pertanyaan: "x⁻³ × x² = ...", pilihan: ["1/x", "x", "x⁻⁵", "x⁰"], jawaban: "1/x" }, // pecahan
+      { pertanyaan: "x⁻³ × x² = ...", pilihan: ["1/x", "x", "x⁻⁵", "x⁰"], jawaban: "1/x" },
       { pertanyaan: "(4²)³ = ...", pilihan: ["4⁵", "4⁶", "4⁷", "4⁴"], jawaban: "4⁶" },
       { pertanyaan: "y³ × y⁻³ = ...", pilihan: ["y⁶", "y⁰", "y³", "1"], jawaban: "y⁰" },
       { pertanyaan: "(x⁴)⁻² = ...", pilihan: ["x⁻⁸", "x⁻⁴", "x⁻²", "x⁸"], jawaban: "x⁻⁸" },
       { pertanyaan: "(a×b)⁻² = ...", pilihan: ["a⁻²b⁻²", "a²b²", "a⁻²+b⁻²", "ab⁻²"], jawaban: "a⁻²b⁻²" },
 
-      // 3. Pangkat Negatif bentuk Pecahan (3)
-      { pertanyaan: "2⁻¹ = ...", pilihan: ["1/2", "2", "0", "-2"], jawaban: "1/2" },
-      { pertanyaan: "a⁻² = ...", pilihan: ["1/a²", "a²", "a⁻²", "2a"], jawaban: "1/a²" },
-      { pertanyaan: "(1/3)⁻² = ...", pilihan: ["3²", "1/9", "3⁻²", "3"], jawaban: "3²" },
-
-      // 4. Soal Sulit (5)
+      // Sulit (5 soal)
       { pertanyaan: "(a²b³)² = ...", pilihan: ["a²b⁶", "a⁴b⁶", "a⁴b³", "a³b⁵"], jawaban: "a⁴b⁶" },
       { pertanyaan: "(x²y³)³ = ...", pilihan: ["x⁶y⁹", "x⁵y⁶", "x⁶y⁶", "x³y³"], jawaban: "x⁶y⁹" },
       { pertanyaan: "(2³ × 2²) ÷ 2³ = ...", pilihan: ["2²", "2⁵", "2", "2⁴"], jawaban: "2²" },
